--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ enable_smart_app_banner                   : true                                
 your_name                                 : Bruce Phan                            
 your_link                                 :                     
 your_city                                 :                                 
-email_address                             : brucephan15081999@gmail.com
+email_address                             : brucephaniosdev@gmail.com
 linkedin_username                         :                                           
 linkedin_company                          :                                           
 facebook_username                         :                                           
